<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/bg">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="210dp"
        android:layout_height="130dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        app:srcCompat="@drawable/logoc" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        />

    <EditText
        android:id="@+id/regName"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName"
        android:drawableLeft="@drawable/user"
        android:paddingLeft="10dp"
        android:background="@drawable/editround"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
         />

    <EditText
        android:id="@+id/regCountry"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:ems="10"
        android:hint="Country"
        android:inputType="text"
        android:background="@drawable/editround"
        android:drawableLeft="@drawable/location"
        android:paddingLeft="10dp"
        android:layout_below="@+id/regName"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearlayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/regCountry">
    <EditText
        android:id="@+id/regCity"
        android:layout_width="135dp"
        android:layout_height="35dp"
        android:ems="10"
        android:hint="City"
        android:background="@drawable/editround"
        android:drawableLeft="@drawable/location"
        android:paddingLeft="10dp"
        android:inputType="text" />

    <EditText
        android:id="@+id/regPostal"
        android:layout_width="135dp"
        android:layout_height="35dp"
        android:layout_marginLeft="20dp"
        android:ems="10"
        android:hint="Postal Code"
        android:background="@drawable/editround"
        android:drawableLeft="@drawable/location"
        android:paddingLeft="10dp"
        android:inputType="textPostalAddress"
        />
    </LinearLayout>

    <EditText
        android:id="@+id/regMobile"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:ems="10"
        android:hint="Mobile Number"
        android:inputType="number|text|phone"
        android:background="@drawable/editround"
        android:drawableLeft="@drawable/phone"
        android:paddingLeft="10dp"
        android:layout_below="@+id/linearlayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"

        />

    <EditText
        android:id="@+id/regemail"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:background="@drawable/editround"
        android:drawableLeft="@drawable/email"
        android:paddingLeft="10dp"
        android:layout_below="@+id/regMobile"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
         />

    <EditText
        android:id="@+id/regpass"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:ems="10"
        android:hint="@string/pass_hint"
        android:inputType="textPassword"
        android:background="@drawable/editround"
        android:drawableLeft="@drawable/password"
        android:paddingLeft="10dp"
        android:layout_below="@+id/regemail"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        />

    <EditText
        android:id="@+id/regconpass"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:ems="10"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:background="@drawable/editround"
        android:drawableLeft="@drawable/confirm_password"
        android:paddingLeft="10dp"
        android:layout_below="@+id/regpass"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"

         />

    <Button
        android:id="@+id/regbutton"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:text="@string/regstring"
        android:background="@drawable/btrounded"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_below="@+id/regconpass"
        android:layout_centerHorizontal="true"
         />

</RelativeLayout>